# home

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  release-rust.yml
crates/dkdc-home/: Cargo.toml
crates/dkdc-home-py/: Cargo.toml
crates/dkdc-home-py/src/: lib.rs
crates/dkdc-home/src/: lib.rs
py/dkdc_home/: __init__.py  core.pyi
py/dkdc_home/lib_core.dylib.dSYM/Contents/Resources/DWARF/: lib_core.dylib
py/dkdc_home/lib_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_core.dylib.yml
tests/: test_home.py
