[project]
name = "dkdc-home"
version = "0.2.2"
description = "Find and create the ~/.dkdc home directory"
authors = [{ name = "Cody", email = "cody@dkdc.io" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "ty>=0.0.19", "pytest>=8"]

[tool.maturin]
module-name = "dkdc_home.core"
python-packages = ["dkdc_home"]
python-source = "py"
manifest-path = "crates/dkdc-home-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/dkdc-home/**/*.rs" },
    { file = "crates/dkdc-home-py/**/*.rs" },
    { file = "py/dkdc_home/**/*.py" },
]
