[workspace]

[package]
name = "home-py"
version = "0.2.1"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dkdc-home = { path = "../dkdc-home" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
